--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.34",
     "sass": "^1.80.5",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
