--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "googleapis": "^144.0.0",
     "pretendard": "^1.3.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
